--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,15 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.1.6.Final</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/javax.validation/com.springsource.javax.validation -->
+
+
 
   </dependencies>
 
