lesson 25 JDBC API

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
       <version>6.1.6.Final</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/javax.validation/com.springsource.javax.validation -->
+    <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.22</version>
+    </dependency>
 
 
 
